--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% if site.pic %}
+          <img src="{{site.logo | relative_url}}" width="500" alt="pic" />
         {% endif %}
 
 	<!--        {% if site.github.is_user_page %} -->
