--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,8 +17,8 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% if site.pic %}
+          <img src="{{site.pic | relative_url}}" alt="pic" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
