--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,6 +21,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
+	<p>Universitetsparken 5, 2100 Copenahgen, Denmark
 	<a href="https://orcid.org/0000-0002-0234-5374">
 	<img alt="ORCID logo" style="vertical-align:middle" src="https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png" width="16" height="16" />
 0000-0002-0234-5374
