--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-	<p><span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span> bonnet@@<!-- sdfjsdhfkjypcs -->di.ku.dk</p>
+	<p><span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span>bonnet@<!-- sdfjsdhfkjypcs -->di.ku.dk</p>
 
 	<p>Universitetsparken 5
 	2100 Copenahgen, Denmark</p>
