--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,11 +24,11 @@
 
 	<p><span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span>bonnet@<!-- sdfjsdhfkjypcs -->di.ku.dk</p>
 
-	<p>Universitetsparken 5
+	<p>Universitetsparken 5<br>
 	2100 Copenahgen, Denmark</p>
 
 	<p><a href="https://orcid.org/0000-0002-0234-5374">
-	<img alt="ORCID logo" style="vertical-align:middle" src="https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png" width="16" height="16" />Orcid </a>; 
+		<img alt="ORCID logo" style="vertical-align:middle" src="https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png" width="16" height="16" />Orcid </a><br> 
 	<a href="https://www.linkedin.com/in/philippe-bonnet-517634/">
 	<img alt="Linkedin Logo" style="vertical-align:middle" src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg" width="16" height="16" />
 	Linkedin</a>
