--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <title>Philippe Bonnet | Home</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/ku-kom/bootstrap@2b26017699df6a1eed7790e4670b4ccd2fd523a6/docs/images/favicons/favicon_fa.ico">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +29,8 @@
 	2100 Copenahgen, Denmark</p>
 
 	<p><a href="https://orcid.org/0000-0002-0234-5374">
-		<img alt="ORCID logo" style="vertical-align:middle" src="https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png" width="16" height="16" />Orcid </a><br> 
+		<img alt="ORCID logo" style="vertical-align:middle" src="https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png" width="16" height="16" />
+		Orcid </a><br> 
 	<a href="https://www.linkedin.com/in/philippe-bonnet-517634/">
 	<img alt="Linkedin Logo" style="vertical-align:middle" src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg" width="16" height="16" />
 	Linkedin</a>
