--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -30,10 +30,16 @@
 
 	<p><a href="https://orcid.org/0000-0002-0234-5374">
 		<img alt="ORCID logo" style="vertical-align:middle" src="https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png" width="16" height="16" />
-		Orcid </a><br> 
+	Orcid </a><br> 
 	<a href="https://www.linkedin.com/in/philippe-bonnet-517634/">
 	<img alt="Linkedin Logo" style="vertical-align:middle" src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg" width="16" height="16" />
-	Linkedin</a>
+	Linkedin</a><br>
+	<a href="https://dblp.org/pid/b/PBonnet.html">
+	<img alt="DBLP Logo" style="vertical-align:middle" src="https://dblp.org/img/dblp.icon.192x192.png" width="16" height="16" />
+	DBLP</a><br>
+	<a href="https://scholar.google.com/citations?user=S9zyMRgAAAAJ&hl=da">
+	<img alt="Google Scholar Logo" style="vertical-align:middle" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" width="16" height="16" />
+	Google Scholar</a>
 	</p>
       </header>
       <section>
