--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,7 +26,7 @@
 	<p><span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span>bonnet@<!-- sdfjsdhfkjypcs -->di.ku.dk</p>
 
 	<p>Universitetsparken 5<br>
-	2100 Copenahgen, Denmark</p>
+	2100 Copenhagen, Denmark</p>
 
 	<p><a href="https://orcid.org/0000-0002-0234-5374">
 		<img alt="ORCID logo" style="vertical-align:middle" src="https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png" width="16" height="16" />
