--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,6 +25,10 @@
 
 	<p><span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span>bonnet@<!-- sdfjsdhfkjypcs -->di.ku.dk</p>
 
+	<h2>Professor</h2>
+
+	<p>Datalogisk Institut Københavns Universitet (DIKU)</p>
+	<p>PLTC Section</p>
 	<p>Universitetsparken 5<br>
 	2100 Copenhagen, Denmark</p>
 
